--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -155,8 +155,8 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 
 .main_content .bank_info { float:right; width:395px; margin-left:3% }
 .main_content .bank_info  .order_bank_catd { background:url(../assets/samp/cards.jpg) no-repeat; padding-top:180px; float:left; width:180px; font-size:12px; text-align:center}
-.main_content .bank_info .bank_text { color:#525252; font-size:14px; float:left; width:205px; text-align:left; margin-left:10px}
-.main_content .bank_info .bank_text .signature { background:url(../assets/samp/signature.jpg) no-repeat 40px 0px; padding:10px 30px 10px 0px; font-size:11px}
+.main_content .bank_info .bank_text { color:#525252; font-size:12px; float:left; width:205px; text-align:left; margin-left:10px}
+.main_content .bank_info .bank_text .signature { background:url(../assets/samp/signature.jpg) no-repeat 40px -10px; padding-top:10px;text-align:right; font-size:11px}
 .main_content .adv { float:right; margin-left:3%}
 
 
