--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -2,7 +2,6 @@
   <div class="slider_control">
     <ul>
       <li class="sl_fest"><a rel="slider_fest" class="active" href="#">О фестивале</a></li>
-      <li class="sl_news"><a rel="slider_news" href="#">Новости фестиваля</a></li>
       <li class="sl_user"><a rel="slider_user" href="#">Участники</a></li>
       <li class="sl_org"><a rel="slider_org" href="#">Оргкомитет</a></li>
     </ul>
@@ -45,31 +44,28 @@
     <a href="" class="prev">Назад</a>
   </div>
   
-  <div id="slider_news" class="slider">
-    <div class="slides_container">
-      <div style="background:url(/assets/samp/slide_samp.jpg) no-repeat 0 top; height:395px">
 
-      </div>
-      <div style="background:url(/assets/samp/slide_samp.jpg) no-repeat 0 top; height:395px">
-
-      </div>
-      <div style="background:url(/assets/samp/slide_samp.jpg) no-repeat 0 top; height:395px">
-
-      </div>
-    </div>
-    <a href="" class="next">Вперед</a>
-    <a href="" class="prev">Назад</a>
-  </div>
   <div id="slider_user" class="slider">
     <div class="slides_container">
-      <div style="background:url(/assets/samp/slide_samp_2.jpg) no-repeat 0 top; height:395px">
-
+      <div class="slide" style="background:url(/assets/samp/slide_user_1.jpg) no-repeat 0 top; height:395px">
+        <div class="slide_text">
+            <div style="float:left; padding-right:50px; padding-top:100px">
+            	Парк Горького<br />
+              18 августа<br />
+              10:00-23:00<br />
+              <span style="color:#e7393b">Вход свободный</span>
+            </div>  
+        </div>
       </div>
-      <div style="background:url(/assets/samp/slide_samp_2.jpg) no-repeat 0 top; height:395px">
-
-      </div>
-      <div style="background:url(/assets/samp/slide_samp_2.jpg) no-repeat 0 top; height:395px">
-
+      <div class="slide" style="background:url(/assets/samp/slide_user_2.jpg) no-repeat 0 top; height:395px">
+        <div class="slide_text">
+            <div style="float:left; padding-right:50px; padding-top:100px">
+            	Парк Горького<br />
+              18 августа<br />
+              10:00-23:00<br />
+              <span style="color:#e7393b">Вход свободный</span>
+            </div>
+        </div>
       </div>
     </div>
     <a href="" class="next">Вперед</a>
@@ -100,7 +96,9 @@
       <div class="order_bank_catd">Заказать уникальную<br />родительскую карту Москвича</div>
       <div class="bank_text">
 
-        Московский кредитный банк рад возможности подарить маленьким и взрослым москвичам этот праздник этим прекрасным летом 2012 года, когда все цветет и вселяет в наши душу надежду.
+МОСКОВСКИЙ КРЕДИТНЫЙ БАНК в честь своего 20-летия дарит городу праздник – детский творческий фестиваль «Яркие люди». 
+<br />
+Гости мероприятия смогут не только весело провести время, но и открыть двери в мир творческих профессий и искусства.
 
         <div class="signature">Александр НИКОЛАШИН,<br />Президент Московского Кредитного Банка</div>
       </div>
