--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -97,9 +97,11 @@
 	    <%= render 'activity_comment', comments: @activity.activity_comments.parents.first(5) %>
 	  </ul>
 
-	  <div class="more_comment">
-	    <a href="#" data-type="parents" data-page="1" class="load_comments">Загрузить еще 5 отзывов</a>
-	  </div>
+	  <% if @activity.activity_comments.parents.count > 5 %>
+	    <div class="more_comment">
+	      <a href="#" data-type="parents" data-page="1" class="load_comments">Загрузить еще 5 отзывов</a>
+	    </div>
+	  <% end %>
 
 	</div>
       <% end %>
@@ -112,9 +114,11 @@
 	    <%= render 'activity_comment', comments: @activity.activity_comments.childrens.first(5) %>
 	  </ul>
 
-	  <div class="more_comment">
-	    <a href="#" data-type="childrens" data-page="1" class="load_comments">Загрузить еще 5 отзывов</a>
-	  </div>
+	  <% if @activity.activity_comments.childrens.count > 5 %>
+	    <div class="more_comment">
+	      <a href="#" data-type="childrens" data-page="1" class="load_comments">Загрузить еще 5 отзывов</a>
+	    </div>
+	  <% end %>
 	</div>
       <% end %>
 
