--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -236,6 +236,28 @@ h1 { font-size:22px; color:#4f4f4f}
 .moscow_agencies .preview_agencies .name { padding-bottom:8px; line-height:1.3}
 .moscow_agencies .preview_agencies .geo { font-size:12px; }
 
+/* SEARCH PAGE */
+
+.search_title { text-align:center}
+.search_title span { color:#787878; font-size:16px; font-weight:bold}
+
+.search_filter { float:left; width:220px;}
+.search_filter .name { color:#787878; font-size:16px; font-weight:bold}
+.search_filter li { padding:4px;}
+.search_filter li a { display:inline-block; height:33px; padding:0px 10px; -moz-border-radius:4px 0px 0px 4px; border-radius:4px 0px 0px 4px; -webkit-border-radius:4px 0px 0px 4px; -khtml-border-radius:4px 0px 0px 4px; line-height:33px; text-decoration:none}
+
+.search_filter li a.active { display:inline-block; height:33px; padding:0px 10px; -moz-border-radius:4px 0px 0px 4px; border-radius:4px 0px 0px 4px; -webkit-border-radius:4px 0px 0px 4px; -khtml-border-radius:4px 0px 0px 4px; line-height:33px; background:#11a3e4; position:relative; color:#fff; font-weight:bold}
+.search_filter li a.active .mask { background:url(../assets/search_filter_arrow.png) no-repeat center top; width:16px; height:33px; display:block; position:absolute; right:-16px;}
+
+.search_list { margin-left:240px}
+
+.search_cell { padding:10px 0px; border-bottom:1px solid #ccc}
+.search_cell .name a { font-size:16px; color:#000000; font-weight:bold}
+.search_cell .short_desc { padding:4px 0px}
+.search_cell .info, .search_cell .info a{ color:#6c6c6c; font-size:11px;}
+.search_cell .info em { font-style:italic}
+
+
 /* COUNCIL BLOCK IN MAIN */
 .council { padding:20px 20px;}
 .council .title { font-family:Futura; border-bottom:2px solid #cdcdc9; color:#4f4f4f; font-size:20px; padding:10px 0px;}
