--- a/app/views/admin/activities/_form.html.erb
+++ b/app/views/admin/activities/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :organization, include_blank: false, input_html: { class: 'chosen_autocomplete' } %>
     <%= f.input :phone %>
     <%= f.input :site %>
-    <%= f.input :direction_tags, input_html: { size: 10 } %>
+    <%= f.input :direction_tags, :collection => DirectionTag.educational, input_html: { size: 6 } %>
     <%= f.input :age_tags, input_html: { size: 4 } %>
     <%= f.input :logo, as: :file, hint: f.template.image_tag(f.object.logo.url) %>
 
