comment form is shown even if user isn't signed in

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -50,3 +50,7 @@
   </div>
   <div class="clear"></div>
 </div>
+
+<%= dialog "Нужно зарегистрироваться", id: :register_dialog do %>
+  Чтобы оставить комментарий, Вам нужно зарегистрироваться. Пожалуйста, проследуйте по ссылке выше.
+<% end %>
