fix main page link to bank

--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -101,6 +101,9 @@
 Гости мероприятия смогут не только весело провести время, но и открыть двери в мир творческих профессий и искусства.
 
         <div class="signature">Александр НИКОЛАШИН,<br />Президент Московского Кредитного Банка</div>
+        
+        <a href="" class="to_bank_link">Подробнее</a>
+        
       </div>
       <div class="clear"></div>
     </div>
