--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -256,6 +256,7 @@ h1 { font-size:22px; color:#4f4f4f}
 .search_cell .short_desc { padding:4px 0px}
 .search_cell .info, .search_cell .info a{ color:#6c6c6c; font-size:11px;}
 .search_cell .info em { font-style:italic}
+.search_cell .match { font-weight:bold}
 
 
 /* COUNCIL BLOCK IN MAIN */
