--- a/app/views/activities/_search_form.html.erb
+++ b/app/views/activities/_search_form.html.erb
@@ -8,7 +8,7 @@
           <% AgeTag.all.each do |age_tag| %>
             <li>
               <%= check_box_tag "age[]", age_tag.id, false, id: (dom_id age_tag), class: :remote_action %>
-              <span class="sim_check"></span>
+
               <%= label_tag (dom_id age_tag), age_tag.title, class: :hidden_checkbox %>
             </li>
           <% end %>
@@ -28,20 +28,20 @@
       </div>
       <div class="cell">
         <strong>По округу</strong>
-        <ul>
-          <% Region.all.each do |region| %>
-            <li>
-              <%= check_box_tag "region[]", region.id, false, id: (dom_id region), class: :remote_action %>
-              <span class="sim_check"></span>
-              <%= label_tag (dom_id region), region.title, class: :hidden_checkbox %>
-            </li>
-          <% end %>
-        </ul>
+        <%= select_tag 'region_faker_select', options_from_collection_for_select(Region.all, :id, :title),
+            :class => 'faker-select', :id => 'faker-region', 'data-select' => 'region', 'data-selected' => 'selected_region', :prompt => 'Выбирите регион' %>
+
+        <div><select id="region" multiple="multiple" name="region[]"></select></div>
+
+        Вы выбрали:
+        <div class="selected_region">
+        </div>
+
       </div>
       <div class="cell">
         <strong>Ближайшая станция метро</strong>
         <%= select_tag 'metro_faker_select', options_from_collection_for_select(MetroStation.all, :id, :title),
-            id: :select_metro, prompt: 'Выберите метро' %>
+            :class => 'faker-select', :id => 'faker-metro', 'data-select' => 'metro', 'data-selected' => 'selected_metro', :prompt => 'Выбирите метро' %>
 
         <div><select id="metro" multiple="multiple" name="metro[]"></select></div>
 
