--- a/app/views/admin/special_projects/_form.html.erb
+++ b/app/views/admin/special_projects/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.inputs 'Основное' do %>
     <%= f.input :title %>
     <%= f.input :author %>
+    <%= f.input :short_description %>
     <%= render 'shared/editor_toolbar', element_id: 'special_project_content' %>
     <%= f.input :content, input_html: {size: 10} %>
     <%= f.input :special_project_tag_list %>
