--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -31,8 +31,10 @@
 
 	<div class="rating_block">
 	  <span class="name">Рейтинг родителей</span>
-	  <div class="rating" data-rating="<%= @activity.users_rating %>" data-activity-id="<%= @activity.id %>" data-lock=<%= !can?(:vote, @activity) %>>Звезды</div>
+	  <!-- OPTIMIZE: bad bad bad..bbr -->
+	  <div class="rating" data-rating="<%= @activity.users_rating %>" data-activity-id="<%= @activity.id %>" data-lock=<%= !can?(:vote, @activity) %> data-already-vote=<%= current_user ? current_user.already_vote?(@activity) : false  %>>Звезды</div>
 	  <%= render partial: 'vote_count' %><br />
+	  <a href="#" class="cancel_rating <%= 'hidden' if (current_user ? !current_user.already_vote?(@activity) : true) %>">Отменить</a>
 	</div>
 	<div class="clear"></div>
 
