--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -514,7 +514,7 @@ span.sim_check.active { background-position:0px 0px; }
 .description { margin-left:260px; }
 
 .description h3 { color:#c14425; font-size:18px; font-family:Futura; padding:10px 0px}
-.description .question-class { color:#343434; font-weight:bold; padding:12px 0px 12px 40px; background:url(/assets/question-class.png) no-repeat 5px 0px;}
+.description .question-class { color:#343434; font-weight:bold; padding:12px 0px 12px 40px; background:url(/assets/question-class.png) no-repeat 5px 5px;}
 
 .description img {  -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px;}
 
@@ -680,9 +680,9 @@ span.sim_check.active { background-position:0px 0px; }
 .expert_page .dop_title {  color:#007ba4; background:url(/assets/magaz_arrow_red.png) no-repeat 0px 7px;font-size:20px;padding:0 0 15px 20px; font-family:Futura; display:block}
 
 
-.expert_list_wrapper { background:url(/assets/slider_mask.png) center}
+.expert_list_wrapper { background:url(/assets/expert_list_bg.jpg) no-repeat center 0px}
 .expert_list { margin:auto; width:960px;}
-.expert_list .exp_preview { height: 300px; position:relative; float:left; width:143px; margin-top:20px; margin-right:11px; text-align:center; }
+.expert_list .exp_preview { height: 300px; position:relative; float:left; width:150px; margin-top:20px; margin-right:10px; text-align:center; }
 .expert_list .exp_preview.last { margin-right:0px;}
 .expert_list .exp_preview .mark { background:url(/assets/exp_mark.png) no-repeat; display:block; width:19px; height:24px; text-align:center; line-height:24px; padding:0px 10px 0px 5px; color:#fff; position:absolute; top:50px;}
 .expert_list .exp_preview .thumb { margin:auto; overflow:hidden;height:122px;width:122px; -moz-border-radius:60px; border-radius:60px; -webkit-border-radius:60px; -khtml-border-radius:60px; behavior: url(border-radius.htc); margin-bottom:5px}
@@ -690,7 +690,7 @@ span.sim_check.active { background-position:0px 0px; }
 
 .expert_list .exp_preview .info {}
 .expert_list .exp_preview .name { color:#007ba4; font-weight:bold; padding:2px 10px; text-align:center; display:block; line-height:1.3}
-
+.expert_list .exp_preview .name a { color:#007ba4; font-weight:bold; text-decoration:none}
 
 
 /* FOOTER */
