--- a/app/views/special_projects/show.html.erb
+++ b/app/views/special_projects/show.html.erb
@@ -27,6 +27,18 @@
     <div class="description">
       <%=raw @special_project.content %>
     </div>
+    
+    <div class="clear"></div>
+    <div class="comment treeview">
+      <ul>
+        <% @comments.each do |comment| %>
+          <%= render 'shared/comment', comment: comment %>
+        <% end %>
+      </ul>
+    </div>
+    <div class="add_comment">
+      <%= render 'shared/comment_form' %>
+    </div>
 
     <div class="clear"></div>
   </div>
