--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -3,7 +3,7 @@
 <div class="profile_comment">
   <div class="title">Ваши комментарии к материалам сайта</div>
   <ul>
-  <% @comments.each do |comment| %>
+  <% @notifications.map(&:child_comment).each do |comment| %>
     <li>
       <div class="thumb"><%= image_tag comment.relation.picture %></div>
       <div class="info">
