--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -94,14 +94,13 @@
     <div class="adv"><a href=""><img src="/assets/samp/adv_pic.jpg" alt="" /></a></div>
     <div class="bank_info">
       <div class="title">Добро пожаловать в мир ярких людей!</div>
-      <div class="order_bank_catd">Заказать уникальную<br />родительскую карту Москвича</div>
+      <div class="order_bank_catd">Президент Московского Кредитного Банка<br />Александр НИКОЛАШИН</div>
       <div class="bank_text">
 
 МОСКОВСКИЙ КРЕДИТНЫЙ БАНК в честь своего 20-летия дарит городу праздник – детский творческий фестиваль «Яркие люди». 
 <br />
-Гости мероприятия смогут не только весело провести время, но и открыть двери в мир творческих профессий и искусства.
+Гости мероприятия смогут не только весело провести время, но и открыть двери в мир творческих профессий и искусства.<br />
 
-        <div class="signature">Александр НИКОЛАШИН,<br />Президент Московского Кредитного Банка</div>
         
         <a href="" class="to_bank_link">Подробнее</a>
         
