--- a/app/views/special_projects/_items.html.erb
+++ b/app/views/special_projects/_items.html.erb
@@ -1,3 +1,4 @@
+<div class="special_project_list">
 <% special_projects.each do |special_project| %>
 <div class="preview_cell">
   <div class="info">
@@ -16,3 +17,5 @@
   </div>
 </div>
 <% end %>
+<div class="clear"></div>
+</div>
